# python-project-sample

./: .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
greeters/: __init__.py  hello.py
tests/: test_greeters.py
